feat(update): auto bump version in CI and add UI update notice via proxy

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ AG2API_PROXY_ENABLED=false
 AG2API_PROXY_URL=
 AG2API_DEBUG=false
 AG2API_LOG_RETENTION_DAYS=3
+AG2API_UPDATE_REPO=znlsl/antigravity2api
+AG2API_UPDATE_BRANCH=main
 
 # Optional: override OAuth client (otherwise uses built-in defaults)
 # GOOGLE_OAUTH_CLIENT_ID=
